syntax = "proto3";

package user;

option go_package = "github.com/gieart87/gohexaclean/api/proto/user";

import "google/protobuf/timestamp.proto";

// UserService defines the user service
service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}

// CreateUserRequest represents the request to create a user
message CreateUserRequest {
  string email = 1;
  string name = 2;
  string password = 3;
}

// GetUserRequest represents the request to get a user
message GetUserRequest {
  string id = 1;
}

// UpdateUserRequest represents the request to update a user
message UpdateUserRequest {
  string id = 1;
  string name = 2;
}

// DeleteUserRequest represents the request to delete a user
message DeleteUserRequest {
  string id = 1;
}

// ListUsersRequest represents the request to list users
message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

// LoginRequest represents the login request
message LoginRequest {
  string email = 1;
  string password = 2;
}

// UserResponse represents a user
message UserResponse {
  string id = 1;
  string email = 2;
  string name = 3;
  bool is_active = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

// DeleteUserResponse represents the delete user response
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// ListUsersResponse represents the list users response
message ListUsersResponse {
  repeated UserResponse users = 1;
  int64 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

// LoginResponse represents the login response
message LoginResponse {
  string token = 1;
  UserResponse user = 2;
}
